2016-08-31  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: add Unit tests section.

2016-08-18  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: replace GLOB with hardcoded filenames for all other
	targets.

	* CMakeLists.txt (logger-src): replace GLOB with hardcoded filenames.
	* src/server/tools/server_ctl/CommandLine.cpp (getNext): remove
	trim to fix CI fail.

	* DEPENDENCIES (Enet): add full section from CI/before_install.sh.
	* DEPENDENCIES (readline): add homepage and download sections.
	* src/server/tools/server_ctl/CommandLine.cpp: remove iostream include
	trying to fix the ci build.
	* DEPENDENCIES (Boost): add homepage and download sections.
	* DEPENDENCIES (Guile): add full section from CI/before_install.sh.
	* DEPENDENCIES (Boost): add some needed components (System, FileSystem,
	Graph, Test).

2016-08-04  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: make CMAKE_CXX_FLAGS also remove src/ from the
	filename.
	* server/ : move remaining files to OLD/service.
	* server/ : remove autotools files.

	* CMakeLists.txt: now search for Readline.
	* CMakeLists.txt: add setting for CMAKE_MODULE_PATH.
	* cmake/FindReadline.cmake: add a cmake script used to search for
	readlien library.
	* src/server/tools/server_ctl/CommandLine.cpp (prompt); replace
	PACKAGE_VERSION macro with VERSION because of the cmake-based
	config.h.
	* src/server/tools/server_ctl/CommandLine.cpp: remove conditionnal
	include of config.h.
	* CMakeLists.txt (rainbrurpg-server-ctl): added rule for new executable.

2016-07-29  Jérôme Pasquier  <rainbru@free.fr>

	* client/ : move remaining files to OLD/service.
	* client/ : remove autotools files.
	* CMakeLists.txt (rainbrurpg-services): changed path to build
	client and .cfg files.
	* src/client: moved client/src files .?pp and .cfg.in here.

2016-06-11  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/Logger.cpp (parse_program_options): returns false by
	default to fix a clang warning.