@@ -10,3 +10,4 @@ mkdir ./build
 cd build
 cmake ..
 make
+make check
