@@ -107,13 +107,20 @@
 - [ ] Maybe add Analytics/Adsense ?
 - [ ] Place other social network buttons (addthis/flattr)
 ***** TODO Handle unit tests
-- [ ] Implement a simple unit test
-  - [ ] Create a cmake option for unit tests (default to ON)
-  - [ ] cmake must search for Boost.Test if unit tests are ON
-  - [ ] Add 'UT ?' to the TODO revision
-- [ ] run it on travis-ci
-  - [ ] Link unit tests with `make check`
-  - [ ] Make travis run them
+      CLOCK: [2016-09-01 jeu. 04:14]--[2016-09-01 jeu. 04:45] =>  0:31
+      CLOCK: [2016-08-31 mer. 21:50]--[2016-08-31 mer. 22:20] =>  0:30
+- [X] Implement a simple unit test
+  - [X] Create a cmake option for unit tests (default to ON)
+  - [X] cmake must search for Boost.Test if unit tests are ON
+  - [X] Add 'UT ?' to the TODO revision
+- [-] Implement a sample test
+  No need for a main function, remove main file
+  - [-] run it on travis-ci
+  - [X] Link unit tests with `make check`
+  - [X] Make travis run them
+- [ ] Got segfault in unit tests
+- [ ] See why librainbrurpg-logger.so is a shared lib. while 
+  librainbrurpg-services.a is a static one
 ***** DONE Trying cmake as a global build system
       CLOCK: [2016-08-18 jeu. 02:24]--[2016-08-18 jeu. 02:32] =>  0:08
       CLOCK: [2016-08-18 jeu. 01:36]--[2016-08-18 jeu. 02:14] =>  0:38
